--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,15 @@
+body .Logo {
+  margin: 0;
+  padding: 0;
+  font-family: sans-serif;
+  background-color: #00BFFF;
+  font-size: 2em;
+  font-weight: bold;
+}
+
 body {
   margin: 0;
   padding: 0;
   font-family: sans-serif;
+  background-color: #00BFFF;
 }
