--- a/src/index.css
+++ b/src/index.css
@@ -2,9 +2,35 @@ body .Logo {
   margin: 0;
   padding: 0;
   font-family: sans-serif;
-  background-color: #00BFFF;
-  font-size: 2em;
+  font-size: 2.5em;
   font-weight: bold;
+  margin-left: 20px;
+  margin-top: 20px;
+}
+
+body .titles {
+  margin: 0;
+  padding: 0;
+  font-family: sans-serif;
+  font-size: 0.38em;
+  font-weight: bold;
+  float: right;
+  margin-top: 50px;
+  margin-right: 50px;
+}
+
+body .image {
+  opacity: 1;
+  animation: fade 2s linear;
+  height: 80px;
+  width: 80px;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+@keyframes fade {
+  0%,100% { opacity: 0 }
+  50% { opacity: 1 }
 }
 
 body {
