--- a/src/index.css
+++ b/src/index.css
@@ -19,6 +19,12 @@ body .titles {
   margin-right: 50px;
 }
 
+.companies {
+  font-size: 0.8em;
+  margin-top: 100px;
+
+}
+
 body .image {
   opacity: 1;
   animation: fade 2s linear;
