--- a/src/App.css
+++ b/src/App.css
@@ -22,7 +22,75 @@
   font-size: large;
 }
 
+.box{
+  width: 500px;
+  height: 200px;
+  border: 2px solid white;
+  padding: 100px;
+  margin-top: 20px;
+}
+
+.Event {
+  font-size: 0.8em;
+  margin-top: 100px;
+  text-decoration: underline;
+}
+
 @keyframes App-logo-spin {
   from { transform: rotate(0deg); }
   to { transform: rotate(360deg); }
+}
+
+body .Logo {
+  margin: 0;
+  padding: 0;
+  font-family: sans-serif;
+  font-size: 2.5em;
+  font-weight: bold;
+  margin-left: 20px;
+  margin-top: 20px;
+  color: white;
+}
+
+body .titles {
+  font-family: sans-serif;
+  font-size: 0.38em;
+  font-weight: bold;
+  float: right;
+  margin-top: 100px;
+  margin-right: 70px;
+  color: white;
+}
+
+a:visited {
+  text-decoration: none; color:white;
+}
+
+.organizations {
+  font-size: 0.8em;
+  margin-top: 40px;
+  margin-left: 25px;
+
+}
+
+body .image {
+  height: 160px;
+  width: 160px;
+  margin-left: 50px;
+}
+
+body .image:hover {
+  cursor: pointer;
+}
+
+@keyframes fade {
+  0%,100% { opacity: 0 }
+  50% { opacity: 1 }
+}
+
+body {
+  margin: 0;
+  padding: 0;
+  font-family: sans-serif;
+  background-color: #00BFFF;
 }
