--- a/src/App.css
+++ b/src/App.css
@@ -57,7 +57,6 @@ body .titles {
   font-size: 0.38em;
   font-weight: bold;
   float: right;
-  margin-top: 100px;
   margin-right: 70px;
   color: white;
 }
@@ -74,7 +73,7 @@ a:visited {
 }
 
 body .image {
-  height: 160px;
+  height: auto;
   width: 160px;
   margin-left: 50px;
 }
