--- a/src/App.css
+++ b/src/App.css
@@ -1,50 +1,13 @@
-.App {
-  text-align: center;
-}
-
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 80px;
-}
-
-.App-header {
-  background-color: #222;
-  height: 150px;
-  padding: 20px;
-  color: white;
-}
-
-.App-title {
-  font-size: 1.5em;
-}
-
-.App-intro {
-  font-size: large;
-}
-
-.box{
-  width: 500px;
-  height: 200px;
-  border: 2px solid white;
-  padding: 100px;
-  margin-top: 20px;
-}
-
-.Event {
-  font-size: 0.8em;
-  margin-top: 100px;
-  text-decoration: underline;
-}
-
-@keyframes App-logo-spin {
-  from { transform: rotate(0deg); }
-  to { transform: rotate(360deg); }
-}
-
-body .Logo {
+body {
   margin: 0;
   padding: 0;
   font-family: sans-serif;
+  background-color: #00BFFF;
+}
+
+.navBar {
+  margin: 0;
+  padding: 0;
   font-size: 2.5em;
   font-weight: bold;
   margin-left: 20px;
@@ -52,9 +15,8 @@ body .Logo {
   color: white;
 }
 
-body .titles {
-  font-family: sans-serif;
-  font-size: 0.38em;
+.titles {
+  font-size: 1em;
   font-weight: bold;
   float: right;
   margin-right: 70px;
@@ -66,7 +28,7 @@ a:visited {
 }
 
 .organizations {
-  font-size: 0.8em;
+  font-size: 1em;
   margin-top: 40px;
   margin-left: 25px;
 
@@ -82,14 +44,18 @@ body .image:hover {
   cursor: pointer;
 }
 
-@keyframes fade {
-  0%,100% { opacity: 0 }
-  50% { opacity: 1 }
+.mapContainer {
+  height: 550px;
+  margin-left: 20px;
+  margin-right: 20px;
+  border: 2px solid darkslategray;
+  border-radius: 5px
 }
 
-body {
-  margin: 0;
-  padding: 0;
-  font-family: sans-serif;
-  background-color: #00BFFF;
+#infoWindowContent {
+  margin: 0px;
+  color: #337ab7;
+  text-align: center;
 }
+
+
