made font styling visible for event details

--- a/src/App.css
+++ b/src/App.css
@@ -23,6 +23,14 @@ body {
   color: white;
 }
 
+.details {
+  font-size: 12px;
+}
+
+.details:visited {
+  color: blue;
+}
+
 a {
   color: white;
   font-size: 0.5em;
