--- a/src/App.css
+++ b/src/App.css
@@ -59,11 +59,11 @@ body .image:hover {
 }
 
 .mapContainer {
-  height: 550px;
+  height: 80vh;
   margin-left: 20px;
   margin-right: 20px;
-  border: 2px solid darkslategray;
-  border-radius: 5px
+  border: 4px solid white;
+  border-radius: 5px;
 }
 
 #infoWindowContent {
