--- a/src/Userprofile.css
+++ b/src/Userprofile.css
@@ -10,15 +10,23 @@ h1 {
   text-align: center
 }
 
-.box {
-height: 200px;
-width: 200px;
-border: 1px white;
-}
-
 .userprofile-body {
   background-color: #00AAE4;
-  height: 650px;
+  height: 820px;
+}
+
+.summary {
+  margin-top: 70px;
+}
+
+.pic {
+  z-index: 1;
+  margin-top: 43px;
+  margin-right: 43px;
+  height: 220px;
+  border-radius: 10px;
+  border: 3px solid white;
+  float: right;
 }
 
 /*
@@ -40,8 +48,14 @@ border: 1px white;
 } */
 
 .profile {
-  text-align: center;
-  margin-right: 30px;
+  text-align: left;
+  margin-left: 30px;
+}
+
+.details {
+  text-align: left;
+  margin-left: -6px;
+  font-size: 20px;
 }
 
 .circleClass {
@@ -68,7 +82,7 @@ border: 1px white;
 
 .skills {
   margin-right: 30px;
-  margin-top: 110px;
+  margin-top: 75px;
   font-size: 30px;
   text-align: center;
 }
