--- a/src/Login_Register.css
+++ b/src/Login_Register.css
@@ -36,7 +36,7 @@ div.Login {
 	text-align: center;
 	justify-content: center;
 	margin: 0px 0px 0px;
-	font-size: 35px;
+	font-size: 1em;
 }
 .Login .login-footer a {
 	color: #999;
