--- a/src/profileStyles.css
+++ b/src/profileStyles.css
@@ -213,8 +213,22 @@ button::-moz-focus-inner,input[type=button]::-moz-focus-inner,input[type=file]>i
     margin-top: 60px;
     border-radius:10px;
     border: 3px solid white;
+    cursor:pointer;
+    z-index: 1;
+}
+
+.iu-loadContainer2{
+    z-index: 2;
+    float: right;
+    width: 10px;
+    height: 10px;
+    margin-right: 70px;
+    margin-top: 60px;
+    border-radius:10px;
+    border: 3px solid white;
     cursor:pointer
 }
+
 .iu-pseudobutton span{
     height:100%
 }
