--- a/src/App.css
+++ b/src/App.css
@@ -5,51 +5,18 @@ body {
   background-color: #00BFFF;
 }
 
-.navBar {
-  margin: 0;
-  padding: 0;
-  font-size: 1.5em;
-  font-weight: bold;
-  margin-left: 20px;
-  margin-top: 20px;
-  color: white;
-}
-
-.titles {
-  font-size: 1em;
-  font-weight: bold;
-  float: right;
-  margin-right: 70px;
-  color: white;
-}
-
-.details {
-  font-size: 12px;
-}
-
-.details:visited {
-  color: blue;
-}
-
-a:visited {
-  text-decoration: none;
-  color:white;
-}
-
-.organizations {
-  font-size: 1em;
-  margin-top: 40px;
-  margin-left: 25px;
-}
-
-body .image {
-  height: auto;
-  width: 160px;
-  margin-left: 50px;
-}
-
 body .image:hover {
   cursor: pointer;
+}
+
+.navbar {
+  background-color: #00BFFF;
+}
+
+.navbar-brand img {
+  margin: 0;
+  padding: 0;
+  height: 100%;
 }
 
 .mapContainer {
@@ -58,6 +25,7 @@ body .image:hover {
   margin-right: 20px;
   border: 4px solid white;
   border-radius: 5px;
+  margin-top: 80px;
 }
 
 #infoWindowContent {
