--- a/src/App.css
+++ b/src/App.css
@@ -2,7 +2,7 @@ body {
   margin: 0;
   padding: 0;
   font-family: sans-serif;
-  background-color: #00BFFF;
+  background-color: #3fcfff;
 }
 
 body .image:hover {
@@ -10,16 +10,29 @@ body .image:hover {
 }
 
 .navbar {
+  min-height: 90px;
   background-color: #00BFFF;
 }
 
-.navbar-default .navbar-brand {
-  display: flex;
-  align-items: center;
-  padding: 5px;
+.navbar-brand {
+  padding: 0 15px;
+  height: 90px;
+  line-height: 90px;
 }
+
+
+@media (min-width: 768px) {
+  .navbar-nav > li > a {
+    /* (90px - line-height of 27px) / 2 = 31.5px */
+    padding-top: 31.5px;
+    padding-bottom: 26.5px;
+    line-height: 27px;
+    background-color: #00BFFF
+  }
+}
+
 .navbar-brand img {
-  height: 125%;
+  height: 100%;
   margin-right: 10px;
 }
 
