--- a/src/App.css
+++ b/src/App.css
@@ -11,24 +11,14 @@ body .image:hover {
 
 .navbar {
   min-height: 90px;
-  background-color: #00BFFF;
+  background-color: #3fcfff;
+  border-bottom: none
 }
 
 .navbar-brand {
   padding: 0 15px;
   height: 90px;
   line-height: 90px;
-}
-
-
-@media (min-width: 768px) {
-  .navbar-nav > li > a {
-    /* (90px - line-height of 27px) / 2 = 31.5px */
-    padding-top: 31.5px;
-    padding-bottom: 26.5px;
-    line-height: 27px;
-    background-color: #00BFFF
-  }
 }
 
 .navbar-brand img {
@@ -42,7 +32,6 @@ body .image:hover {
   margin-right: 20px;
   border: 4px solid white;
   border-radius: 5px;
-  margin-top: 80px;
 }
 
 #infoWindowContent {
