--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,7 @@
 body {
   margin: 0;
   padding: 0;
-  font-family: sans-serif;
+  font-family: Raleway, sans-serif;
   background-color: #3fcfff;
 }
 
@@ -12,7 +12,8 @@ body .image:hover {
 .navbar {
   min-height: 90px;
   background-color: #3fcfff;
-  border-bottom: none
+  border-bottom: none;
+  font-size: large;
 }
 
 .navbar-brand {
@@ -24,6 +25,15 @@ body .image:hover {
 .navbar-brand img {
   height: 100%;
   margin-right: 10px;
+}
+
+.navbar-default .navbar-nav>.active>a, .navbar-default .navbar-nav>.active>a:focus, .navbar-default .navbar-nav>.active>a:hover {
+  background-color: #b2fbe0;
+  border-radius: 5px;
+}
+
+ul.nav {
+  margin: 15px;
 }
 
 .mapContainer {
@@ -45,7 +55,7 @@ body .image:hover {
 }
 
 .infoBits{
-  margin:5%;
+  margin: 10px;
 }
 
 .sideBoxInfo{
@@ -82,6 +92,5 @@ body .image:hover {
   border: 1px solid #337ab7;
   border-top-left-radius: 15px;
   border-bottom-left-radius: 15px;
-
-  transition: right 2s;
+  transition: right 1.5s;
 }
