--- a/src/Login_Register.css
+++ b/src/Login_Register.css
@@ -12,7 +12,8 @@ div.Login {
 .Login .login-content {
 	padding: 20px;
 	border-radius: 5px;
-	border: 2px solid white;
+	border: 6px solid white;
+	box-shadow: 5px 5px 4pc darkslategray;
 }
 .Login .login-header {
 	border-bottom: none;
@@ -53,7 +54,7 @@ div.Login {
 	z-index: 9;
 	background: white;
 	padding: 15px;
-	box-shadow: 0px 3px 3px darkslategray;
+	box-shadow: 0px 2px 3pc darkslategray;
 }
 .Login .avatar img {
 	width: 100%;
