--- a/src/App.css
+++ b/src/App.css
@@ -13,9 +13,14 @@ body .image:hover {
   width: 70px;
   height: 70px;
   display: inline-block;
-  margin: 0px 5px 0px 5px;
+  margin: 5px;
   border: 2px white solid;
   border-radius: 6px;
+}
+
+.picsDiv {
+  padding-left: 40px;
+  padding-right: 40px;
 }
 
 .pics:hover {
@@ -90,7 +95,7 @@ ul.nav {
   font-size:larger;
   opacity: 1;
   color:white;
-  margin-top: 20%;
+  margin-top: 30px;
 }
 
 .btn-default {
