--- a/src/Userprofile.css
+++ b/src/Userprofile.css
@@ -57,8 +57,8 @@ h1 {
 .eventStyle {
   border:3px solid white;
   border-radius: 5px;
-  margin-left: 150px;
-  margin-right: 150px;
+  margin-left: 2vw;
+  margin-right: 2vw;
   margin-top: 30px;
   margin-bottom: 30px;
 }
