--- a/src/App.css
+++ b/src/App.css
@@ -26,6 +26,8 @@ body .image:hover {
 .pics:hover {
   width: 85px;
   height:85px;
+  padding:0;
+  margin:0;
   transition: .5s;
   cursor: pointer;
   border: 2px #3fcfff solid;
